# zero2prod

./: Cargo.toml  README.org
.github/workflows/: rust.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
